samples/_failures_safe/1761291294_fba007_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01ae51e8.c: In function ‘main’:
./samples/SAFE/__tmp_01ae51e8.c:170:13: error: expected declaration or statement at end of input
  170 |             data_input[0] = '\0';
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_01ae51e8.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01ae51e8.c:170:13: error: expected declaration or statement at end of input
